Fix overflow when animation on timeline appears

--- a/src/general.scss
+++ b/src/general.scss
@@ -17,6 +17,10 @@ body {
     }
 }
 
+#root {
+    overflow: hidden;
+}
+
 h2 {
     margin: 55px 0 5px;
     text-align: center;
